Estructura de la base de datos

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <header>
+        <div class="logo">
+            <img src="/Codigo/resources/img/logoA.png" alt="Logo" />
+        </div>
         <h1>Guía de Eventos Culturales de Medellín</h1>
         <p>Descubre los eventos más importantes de Medellín</p>
     </header>
@@ -28,12 +31,12 @@
         <div class="info-box">
             <h2>Bienvenidos a Medellín</h2>
             <p>
-                Medellín, conocida como la "Ciudad de la Eterna Primavera" por su clima templado y agradable, 
+                Medellín, conocida como la <strong>"Ciudad de la Eterna Primavera"</strong> por su clima templado y agradable, 
                 es la segunda ciudad más grande de Colombia y la capital del departamento de Antioquia. 
                 A lo largo de los siglos, se transformó en un próspero centro industrial y económico, 
                 convirtiéndose en una de las ciudades más hermosas y dinámicas de toda América Latina.
             </p>
-            <p>Las dos mejores épocas para visitar Medellín son Agosto y Diciembre. Estos dos meses no solo se caracterizan por ofrecer el clima más cálido, sino que además tienen las mejores actividades para los turistas. Por un lado en Agosto se celebra la Feria de las Flores, que es el evento cultural más importante de la ciudad. Por su parte, en diciembre están las fiestas navideñas y encontrarás una ciudad muy iluminada y viva.</p>
+            <p>Las dos mejores épocas para visitar Medellín son Agosto y Diciembre. Estos dos meses no solo se caracterizan por ofrecer el clima más cálido, sino que además tienen las <strong>mejores actividades para los turistas. </strong>Por un lado en Agosto se celebra la Feria de las Flores, que es el evento cultural más importante de la ciudad. Por su parte, en diciembre están las fiestas navideñas y encontrarás una ciudad muy iluminada y viva.</p>
         </div>
 
         <div class="img-box">
@@ -41,7 +44,7 @@
         </div>
         
         <div class="img-box">
-            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Cultura de Medellín">
+            <img src="resources/img/Medellin-Colombia.jpg" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
@@ -58,8 +61,9 @@
     </section>
 
 
-    <section>
+    <section class="info-med">
         <h2>Todo lo que necesitas saber sobre Medellín</h2>
+        <p>Medellín <strong>representa todo lo bueno de Colombia.</strong> Las exuberantes y onduladas montañas de los Andes del Norte son el telón de fondo de cada foto. El clima más perfecto que se pueda imaginar durante todo el año, con temperaturas promedio de 22 grados Celsius o 72 grados Fahrenheit, es el resultado de su ubicación única cerca del ecuador, pero a la altitud perfecta para que la temperatura sea la adecuada. Este clima perfecto ha llevado a que la ciudad sea apodada "la cuidad de primavera eterna".</p>
         <p>
             Medellín, la segunda ciudad más grande de Colombia, se ha convertido en uno de los destinos 
             preferidos por viajeros nacionales e internacionales. Gracias a su clima, infraestructura y oferta 
@@ -71,7 +75,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="info-med">
         <h2>¿Cómo es Medellín?</h2>
         <p>
             Medellín es una ciudad rodeada de montañas y bañada en un clima primaveral durante todo el año. 
@@ -85,7 +89,7 @@
         </p>
     </section>
     
-    <section>
+    <section class="info-med">
         <h2>¿Dónde queda Medellín?</h2>
         <p>
             Ubicada en la región central de Colombia, en el departamento de Antioquia, Medellín se encuentra 
@@ -96,11 +100,9 @@
             Antioquia, una ciudad colonial rica en historia. Estos lugares están a solo un par de horas en 
             auto, lo que hace de Medellín una base ideal para el turismo en la región.
         </p>
-    <section>
+    </section>
 
   </head>
-  <body>
-
     <script type="module" src="./index.js"></script>
 
     <footer>
