--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -38,7 +38,7 @@
         </div>
         
         <div class="img-box">
-            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Cultura de Medellín">
+            <img src="/Codigo/resources/img/Tango.jpg" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
@@ -70,7 +70,7 @@
         </div>
         
         <div class="img-box">
-            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Cultura de Medellín">
+            <img src="/Codigo/resources/img/altavoz.png" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
