correciion de algunos links

--- a/Proyecto_Final/Codigo/pages/calendar.html
+++ b/Proyecto_Final/Codigo/pages/calendar.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía de Eventos Culturales de Medellín</title>
-    <link rel="stylesheet" href="/Codigo/resources/styles.css">
+    <link rel="stylesheet" href="/resources/styles.css">
+    <link rel = "icon" href= "/resources/img/logoA.png"/>
 </head>
+
 <body>
     <header>
         <h1>Guía de Eventos Culturales de Medellín</h1>
@@ -13,9 +15,9 @@
     </header>
 
     <nav>
-        <a href="/Codigo/index.html">Inicio</a>
-        <a href="/Codigo/pages/events.html">Eventos</a>
-        <a href="/Codigo/pages/calendar.html">Calendario</a>
+        <a href="/index.html">Inicio</a>
+        <a href="/pages/events.html">Eventos</a>
+        <a href="/pages/calendar.html">Calendario</a>
     </nav>
 
     <section>
@@ -46,6 +48,6 @@
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
     </footer>
 
-    <script src="/Codigo/resources/calendar.js"></script>
+    <script src="/resources/calendar.js"></script>
 </body>
 </html>
