--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -6,23 +6,23 @@
     <meta name="description" content="Proyecto final" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guía Eventos de Medellín</title>
-    <link rel="stylesheet" href="resources/styles.css">
-    <link rel = "icon" href= "resources/img/logoA.png"/>
+    <link rel="stylesheet" href="/resources/styles.css">
+    <link rel = "icon" href= "/resources/img/logoA.png"/>
 
 
 <body>
     <header>
         <div class="logo">
-            <img src="/Codigo/resources/img/logoA.png" alt="Logo" />
+            <img src="/resources/img/logoA.png" alt="Logo" />
         </div>
         <h1>Guía de Eventos Culturales de Medellín</h1>
         <p>Descubre los eventos más importantes de Medellín</p>
     </header>
 
     <nav>
-        <a href="/Codigo/index.html">Inicio</a>
-        <a href="/Codigo/pages/events.html">Eventos</a>
-        <a href="/Codigo/pages/calendar.html">Calendario</a>
+        <a href="/index.html">Inicio</a>
+        <a href="/pages/events.html">Eventos</a>
+        <a href="/pages/calendar.html">Calendario</a>
     </nav>
 
 
@@ -107,7 +107,7 @@
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
-        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
+        <p>Desarrollado Por: <strong>Daniela Perez Gallego</strong> </p>
         <p>Universidad De Antioquia</p>
         <p>2024-2</p>
     </footer>
