--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía de Eventos Culturales de Medellín</title>
-    <link rel="stylesheet" href="/Codigo/resources/styles.css">
+    <link rel="stylesheet" href="/resources/styles.css">
+    <link rel = "icon" href= "/resources/img/logoA.png"/>
+
 </head>
 
 <body>
@@ -14,9 +16,9 @@
     </header>
 
     <nav>
-        <a href="/Codigo/index.html">Inicio</a>
-        <a href="/Codigo/pages/events.html">Eventos</a>
-        <a href="/Codigo/pages/calendar.html">Calendario</a>
+        <a href="/index.html">Inicio</a>
+        <a href="/pages/events.html">Eventos</a>
+        <a href="/pages/calendar.html">Calendario</a>
     </nav>
 
     <section class="container">
@@ -30,15 +32,15 @@
                 actividades culturales que muestran la riqueza de la tradición antioqueña.
             </p>
 
-            <button class="btn" onclick="window.open('/Codigo/pages/feria.html', '_blank')">CONOCE MÁS</button>
+            <button class="btn" onclick="window.open('/pages/feria.html', '_blank')">CONOCE MÁS</button>
         </div>
 
         <div class="img-box">
-            <img src="/Codigo/resources/img/feria_flores.jpeg" alt="Feria de las flores">
+            <img src="/resources/img/feria_flores.jpeg" alt="Feria de las flores">
         </div>
         
         <div class="img-box">
-            <img src="/Codigo/resources/img/Tango.jpg" alt="Cultura de Medellín">
+            <img src="/resources/img/Tango.jpg" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
@@ -66,11 +68,11 @@
         </div>
 
         <div class="img-box">
-            <img src="/Codigo/resources/img/Colombiamoda.jpg" alt="Imagen Colombiamoda">
+            <img src="/resources/img/Colombiamoda.jpg" alt="Imagen Colombiamoda">
         </div>
         
         <div class="img-box">
-            <img src="/Codigo/resources/img/altavoz.png" alt="Cultura de Medellín">
+            <img src="/resources/img/altavoz.png" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
