--- a/Proyecto_Final/Codigo/pages/feria.html
+++ b/Proyecto_Final/Codigo/pages/feria.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía de Eventos Culturales de Medellín</title>
-    <link rel="stylesheet" href="/Codigo/resources/styles.css">
+    <link rel="stylesheet" href="/resources/styles.css">
+    <link rel = "icon" href= "/resources/img/logoA.png"/>
 </head>
+
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=API_KEY_GOOGLE_MAPS&callback=initMap"></script>
+
 <body>
     <header>
         <h1>Guía de Eventos Culturales de Medellín</h1>
@@ -14,9 +17,9 @@
     </header>
 
     <nav>
-        <a href="/Codigo/index.html">Inicio</a>
-        <a href="/Codigo/pages/events.html">Eventos</a>
-        <a href="/Codigo/pages/calendar.html">Calendario</a>
+        <a href="/index.html">Inicio</a>
+        <a href="/pages/events.html">Eventos</a>
+        <a href="/pages/calendar.html">Calendario</a>
     </nav>
 
     <h1>Feria de las Flores 2024 en Medellín</h1>
@@ -63,6 +66,6 @@
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
     </footer>
 
-    <script src="/Codigo/resources/events.js"></script>
+    <script src="/resources/events.js"></script>
 </body>
 </html>
