Corecciones en la BD

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -107,7 +107,7 @@
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
-        <p>Desarrollado Por: <strong>Daniela Perez Gallego</strong> </p>
+        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
         <p>Universidad De Antioquia</p>
         <p>2024-2</p>
     </footer>
