Solucion definitiva a la API MAPS

--- a/Proyecto_Final/Codigo/pages/feria.html
+++ b/Proyecto_Final/Codigo/pages/feria.html
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-        <a href="/index.html">Inicio</a>
+        <a href="/pages/index.html">Inicio</a>
         <a href="/pages/events.html">Eventos</a>
         <a href="/pages/calendar.html">Calendario</a>
     </nav>
@@ -78,7 +78,6 @@
     </footer>
 
     <script src="/resources/events.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap"></script>
 
 </body>
 </html>
