--- a/Proyecto_Final/Codigo/pages/index.html
+++ b/Proyecto_Final/Codigo/pages/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/resources/styles.css">
     <link rel = "icon" href= "/resources/img/logoA.png"/>
 
-
 <body>
     <header>
         <div class="logo">
@@ -20,7 +19,7 @@
     </header>
 
     <nav>
-        <a href="/index.html">Inicio</a>
+        <a href="/pages/index.html">Inicio</a>
         <a href="/pages/events.html">Eventos</a>
         <a href="/pages/calendar.html">Calendario</a>
     </nav>
@@ -109,7 +108,6 @@
 
   </head>
     <script src="/resources/events.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap"></script>
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
