Error con la direccion del index solucionado

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guía Eventos de Medellín</title>
     <link rel="stylesheet" href="/resources/styles.css">
-    <link rel = "icon" href= "/resources/img/logoA.png"/>
+    <link rel="icon" href="/resources/img/logoA.png" type="image/png">
 
 <body>
     <header>
@@ -19,7 +19,7 @@
     </header>
 
     <nav>
-        <a href="/pages/index.html">Inicio</a>
+        <a href="/">Inicio</a>
         <a href="/pages/events.html">Eventos</a>
         <a href="/pages/calendar.html">Calendario</a>
     </nav>
