--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -16,7 +16,7 @@
     </header>
 
     <nav>
-        <a href="/pages/index.html">Inicio</a>
+        <a href="/">Inicio</a>
         <a href="/pages/events.html">Eventos</a>
         <a href="/pages/calendar.html">Calendario</a>
     </nav>
