--- a/Proyecto_Final/Codigo/pages/feria.html
+++ b/Proyecto_Final/Codigo/pages/feria.html
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-        <a href="/pages/index.html">Inicio</a>
+        <a href="/">Inicio</a>
         <a href="/pages/events.html">Eventos</a>
         <a href="/pages/calendar.html">Calendario</a>
     </nav>
@@ -31,8 +31,8 @@
     </section>
 
     <section class="map-container">
-        <button onclick="toggleInfo('map2', 'bogota')">Mostrar Mapa de la feria de las flores</button>
-        <div id="map2" class="map" style="display: none;"></div>
+        <button onclick="toggleInfo('map2', 'feria')">Mostrar Mapa de la feria de las flores</button>
+        <div id="map2" class="map" style="display: none; "></div>
     </section>
 
     <section class="map-container">
