Cambios en la informacion de los eventos

--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -52,7 +52,7 @@
                 de baile, atrayendo a artistas y aficionados de todo el mundo.
             </p>
             
-        <button class="btn">CONOCE MÁS</button>
+            <button class="btn" onclick="window.open('/pages/tango.html', '_blank')">CONOCE MÁS</button>
         </div>
 
         <div class="info-box">
@@ -64,7 +64,7 @@
                 la moda.
             </p>
 
-            <button class="btn">CONOCE MÁS</button>
+            <button class="btn" onclick="window.open('/pages/moda.html', '_blank')">CONOCE MÁS</button>
         </div>
 
         <div class="img-box">
