Cambios en el calendario

--- a/Proyecto_Final/Codigo/pages/feria.html
+++ b/Proyecto_Final/Codigo/pages/feria.html
@@ -30,8 +30,10 @@
 
     <section class="info-med">
         <h2>Fechas de la Feria de las Flores 2024</h2>
-        <p><strong>Del 3 al 12 de agosto de 2024.</strong></p>
-
+        <p><strong>Del 3 al 12 de agosto de 2024.</strong> 
+            <a href="/pages/calendar.html?year=2024&month=7&highlightStart=2024-08-03&highlightEnd=2024-08-12">Ver en el calendario</a>
+        </p>
+        
         <h2>Eventos Destacados</h2>
 
         <h3>Desfile de Silleteros</h3>
