--- a/Proyecto_Final/Codigo/pages/moda.html
+++ b/Proyecto_Final/Codigo/pages/moda.html
@@ -35,6 +35,8 @@
     <section class="info-med">
         <h2>Fechas de Colombiamoda 2024</h2>
         <p><strong>Del 23 al 25 de julio de 2024.</strong></p>
+            <a href="/pages/calendar.html?year=2024&month=6&highlightStart=2024-07-23&highlightEnd=2024-07-25">Ver en el calendario</a>
+        </p>
 
         <h2>Eventos Destacados</h2>
 
