--- a/Proyecto_Final/Codigo/pages/tango.html
+++ b/Proyecto_Final/Codigo/pages/tango.html
@@ -34,7 +34,9 @@
 
     <section class="info-med">
         <h2>Fechas del Festival Internacional de Tango 2024</h2>
-        <p><strong>Del 15 al 22 de septiembre de 2024.</strong></p>
+        <p><strong>Del 15 al 22 de septiembre de 2024.</strong>
+            <a href="/pages/calendar.html?year=2024&month=8&highlightStart=2024-09-15&highlightEnd=2024-09-22">Ver en el calendario</a>
+        </p>
 
         <h2>Eventos Destacados</h2>
 
