--- a/Proyecto_Final/Codigo/pages/moda.html
+++ b/Proyecto_Final/Codigo/pages/moda.html
@@ -25,14 +25,7 @@
         <p><strong>Colombiamoda: La Pasarela de Estilo y Creatividad</strong></p>
         <p>Colombiamoda es el evento más importante de la moda en Colombia y uno de los más destacados en Latinoamérica. Cada año, Medellín se transforma en la capital de la moda con la participación de diseñadores, marcas y modelos de renombre mundial. En 2024, el evento promete ser más innovador que nunca, mostrando las últimas tendencias en moda, calzado, accesorios y tecnología aplicada al diseño.</p>
         <p>Durante los días del evento, los asistentes disfrutarán de desfiles, presentaciones en vivo, conferencias, y talleres que promueven la creatividad y el emprendimiento en el mundo de la moda. Colombiamoda es un punto de encuentro para los amantes de la moda, donde se celebra la diversidad, la cultura y la innovación. ¡No te puedes perder la experiencia única que trae este evento!</p>
-    </section>
 
-    <section class="map-container">
-        <button onclick="toggleInfo('map2', 'moda')">Mostrar Mapa de Colombiamoda 2024</button>
-        <div id="map2" class="map" style="display: none;"></div>
-    </section>
-
-    <section class="info-med">
         <h2>Fechas de Colombiamoda 2024</h2>
         <p><strong>Del 23 al 25 de julio de 2024.</strong></p>
             <a href="/pages/calendar.html?year=2024&month=6&highlightStart=2024-07-23&highlightEnd=2024-07-25">Ver en el calendario</a>
@@ -44,6 +37,11 @@
         <p>El desfile de apertura de Colombiamoda es un espectáculo lleno de glamour, donde las principales marcas y diseñadores presentan sus colecciones para la temporada. Este evento marca el inicio de tres días de actividades relacionadas con la moda y el diseño.</p>
         <p><strong>Fecha:</strong> 23 de julio de 2024 <br>
         <strong>Lugar:</strong> Plaza Mayor, Medellín</p>
+
+        <section class="map-container">
+            <button onclick="toggleInfo('map3', 'plaza')">Mostrar Mapa de Plaza mayor, sede de Colombiamoda 2024</button>
+            <div id="map3" class="map" style="display: none;"></div>
+        </section>
 
         <h3>Pasarelas de Moda</h3>
         <p>Durante los tres días de Colombiamoda, se realizan diversos desfiles de moda en los que se presentan las colecciones más recientes de diseñadores nacionales e internacionales, mostrando lo mejor de la moda para hombres y mujeres.</p>
