--- a/Proyecto_Final/Codigo/pages/tango.html
+++ b/Proyecto_Final/Codigo/pages/tango.html
@@ -25,14 +25,7 @@
         <p><strong>El Tango: Un Ritmo que Une Corazones</strong></p>
         <p>El Festival Internacional de Tango de Medellín es uno de los eventos más esperados por los amantes de este icónico género musical y de danza. Celebrado anualmente, el festival reúne a destacados artistas nacionales e internacionales, quienes comparten su pasión por el tango en múltiples presentaciones, clases y actividades culturales. En 2024, la ciudad de Medellín se convertirá en el epicentro del tango, con una serie de espectáculos y actividades que pondrán a todos a bailar al ritmo de esta hermosa tradición.</p>
         <p>El festival no solo incluye espectáculos de tango, sino también competencias, clases magistrales y una vibrante agenda cultural que abarca desde milongas hasta conferencias sobre la historia y la evolución del tango. Si eres un amante de esta danza o si quieres conocerla más a fondo, el Festival Internacional de Tango es el lugar perfecto para vivir una experiencia única.</p>
-    </section>
 
-    <section class="map-container">
-        <button onclick="toggleInfo('map2', 'tango')">Mostrar Mapa del Festival Internacional de Tango</button>
-        <div id="map2" class="map" style="display: none;"></div>
-    </section>
-
-    <section class="info-med">
         <h2>Fechas del Festival Internacional de Tango 2024</h2>
         <p><strong>Del 15 al 22 de septiembre de 2024.</strong>
             <a href="/pages/calendar.html?year=2024&month=8&highlightStart=2024-09-15&highlightEnd=2024-09-22">Ver en el calendario</a>
@@ -49,6 +42,11 @@
         <p>Los mejores bailarines de tango del mundo competirán en varias categorías, mostrando su destreza y pasión por esta danza. Un evento que promete emoción y elegancia en cada paso.</p>
         <p><strong>Fecha:</strong> 17 de septiembre de 2024 <br>
         <strong>Lugar:</strong> Plaza Mayor, Medellín</p>
+
+        <section class="map-container">
+            <button onclick="toggleInfo('map3', 'plaza')">Mostrar Mapa de Plaza mayor</button>
+            <div id="map3" class="map" style="display: none;"></div>
+        </section>
 
         <h3>Milonga Bajo las Estrellas</h3>
         <p>Una noche de tango al aire libre, donde los asistentes pueden disfrutar de una milonga (bailes de tango) bajo las estrellas, rodeados de la magia de Medellín.</p>
