Cambio de las direcciones de los archivos

--- a/Proyecto_Final/Codigo/app/index.html
+++ b/Proyecto_Final/Codigo/app/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="Proyecto final" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guía Eventos de Medellín</title>
-    <link rel="stylesheet" href="/resources/styles.css">
-    <link rel="icon" href="/resources/img/logoA.png" type="image/png">
+    <link rel="stylesheet" href="./resources/styles.css">
+    <link rel="icon" href="./resources/img/logoA.png" type="image/png">
 
 <body>
     <header>
         <div class="logo">
-            <img src="/resources/img/logoA.png" alt="Logo" />
+            <img src="./resources/img/logoA.png" alt="Logo" />
         </div>
         <h1>Guía de Eventos Culturales de Medellín</h1>
         <p>Descubre los eventos más importantes de Medellín</p>
@@ -20,8 +20,9 @@
 
     <nav>
         <a href="/">Inicio</a>
-        <a href="/pages/events.html">Eventos</a>
-        <a href="/pages/calendar.html">Calendario</a>
+        <a href="./pages/events.html">Eventos</a>
+        <a href="./pages/calendar.html">Calendario</a>
+        
     </nav>
 
 
@@ -39,11 +40,11 @@
         </div>
 
         <div class="img-box">
-            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Vista de Medellín">
+            <img src="./resources/img/palacio-cultura-medellin.jpg" alt="Vista de Medellín">
         </div>
         
         <div class="img-box">
-            <img src="resources/img/Medellin-Colombia.jpg" alt="Cultura de Medellín">
+            <img src="./resources/img/Medellin-Colombia.jpg" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
@@ -107,7 +108,7 @@
     </section>
 
   </head>
-    <script src="/resources/events.js"></script>
+  <script src="./resources/events.js"></script>
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
@@ -117,6 +118,3 @@
     </footer>
 </body>
 </html>
-
-
-
