--- a/Proyecto_Final/Codigo/app/pages/calendar.html
+++ b/Proyecto_Final/Codigo/app/pages/calendar.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía de Eventos Culturales de Medellín</title>
-    <link rel="stylesheet" href="/resources/styles.css">
-    <link rel = "icon" href= "/resources/img/logoA.png"/>
+    <link rel="stylesheet" href="../resources/styles.css">
+    <link rel = "icon" href= "../resources/img/logoA.png"/>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
 
     <nav>
         <a href="/">Inicio</a>
-        <a href="/pages/events.html">Eventos</a>
-        <a href="/pages/calendar.html">Calendario</a>
+        <a href="../pages/events.html">Eventos</a>
+        <a href="../pages/calendar.html">Calendario</a>
     </nav>
 
     <section>
@@ -48,6 +48,6 @@
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
     </footer>
 
-    <script src="/resources/calendar.js"></script>
+    <script src="../resources/calendar.js"></script>
 </body>
 </html>
