--- a/Proyecto_Final/Codigo/app/pages/feria.html
+++ b/Proyecto_Final/Codigo/app/pages/feria.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feria de las Flores</title>
-    <link rel="stylesheet" href="/resources/styles.css">
-    <link rel = "icon" href= "/resources/img/logoA.png"/>
+    <link rel="stylesheet" href="../resources/styles.css">
+    <link rel = "icon" href= "../resources/img/logoA.png"/>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
 
     <nav>
         <a href="/">Inicio</a>
-        <a href="/pages/events.html">Eventos</a>
-        <a href="/pages/calendar.html">Calendario</a>
+        <a href="../pages/events.html">Eventos</a>
+        <a href="../pages/calendar.html">Calendario</a>
     </nav>
 
     <section class="info-med">
@@ -29,7 +29,7 @@
  
         <h2>Fechas de la Feria de las Flores 2024</h2>
         <p><strong>Del 3 al 12 de agosto de 2024.</strong> 
-            <a href="/pages/calendar.html?year=2024&month=7&highlightStart=2024-08-03&highlightEnd=2024-08-12">Ver en el calendario</a>
+            <a href="../pages/calendar.html?year=2024&month=7&highlightStart=2024-08-03&highlightEnd=2024-08-12">Ver en el calendario</a>
         </p>
         
         <h2>Eventos Destacados</h2>
@@ -69,6 +69,6 @@
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
     </footer>
 
-    <script src="/resources/events.js"></script>
+    <script src="../resources/events.js"></script>
 </body>
 </html>
