--- a/Proyecto_Final/Codigo/app/pages/moda.html
+++ b/Proyecto_Final/Codigo/app/pages/moda.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colombiamoda 2024</title>
-    <link rel="stylesheet" href="/resources/styles.css">
-    <link rel="icon" href="/resources/img/logoA.png"/>
+    <link rel="stylesheet" href="../resources/styles.css">
+    <link rel="icon" href="../resources/img/logoA.png"/>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
 
     <nav>
         <a href="/">Inicio</a>
-        <a href="/pages/events.html">Eventos</a>
-        <a href="/pages/calendar.html">Calendario</a>
+        <a href="../pages/events.html">Eventos</a>
+        <a href="../pages/calendar.html">Calendario</a>
     </nav>
 
     <section class="info-med">
@@ -68,6 +68,6 @@
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
     </footer>
 
-    <script src="/resources/events.js"></script>
+    <script src="../resources/events.js"></script>
 </body>
 </html>
